tests/ui/feature-gates/issue-43106-gating-of-derive-2.stderr
error: cannot find derive macro `x3300` in this scope
  --> $DIR/issue-43106-gating-of-derive-2.rs:14:14
   |
LL |     #[derive(x3300)]
   |              ^^^^^

error: cannot find derive macro `x3300` in this scope
  --> $DIR/issue-43106-gating-of-derive-2.rs:14:14
   |
LL |     #[derive(x3300)]
   |              ^^^^^

error: cannot find derive macro `x3300` in this scope
  --> $DIR/issue-43106-gating-of-derive-2.rs:9:14
   |
LL |     #[derive(x3300)]
   |              ^^^^^

error: cannot find derive macro `x3300` in this scope
  --> $DIR/issue-43106-gating-of-derive-2.rs:9:14
   |
LL |     #[derive(x3300)]
   |              ^^^^^

error: cannot find derive macro `x3300` in this scope
  --> $DIR/issue-43106-gating-of-derive-2.rs:4:14
   |
LL |     #[derive(x3300)]
   |              ^^^^^

error: cannot find derive macro `x3300` in this scope
  --> $DIR/issue-43106-gating-of-derive-2.rs:4:14
   |
LL |     #[derive(x3300)]
   |              ^^^^^

error: aborting due to 6 previous errors

